# esp32-rtp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  stream.sdp
main/: CMakeLists.txt  Kconfig.projbuild  camera_pins.h  main.c  pdm_mic.c  pdm_mic.h  wifi.c  wifi.h
main/include/: camera_pins.h  closer.h  pdm_mic.h
main/rtp/: README.md  audio.sdp  common.h  jpeg.c  jpeg.h  jpeg.sdp  rtp.c  rtp.h  rtpdata.h  stream.sdp
main/rtp/include/: common.h  jpeg.h  rtp.h
main/rtp_work/: README.md  rtp.c
main/wifi/: wifi.c
test/: upd_client.js
